# TDD_Test

./: .gitignore  pyproject.toml  readme.md
config/: settings.py  urls.py
func_tests/: test_func1.py
todo/: urls.py  views.py
todo/templates/todo/: index.html
